# github-repo-recommendation

./: .gitignore  Makefile  README.md  config.json  config_template.json  docker-compose.yml  environment.yml  pyproject.toml
elastic-start-local/: start.sh
github-repo-recommendation/: jobs.slurm  nlp.py  recup_repo.py
mlruns/0/: meta.yaml
notebooks/: appel_api.ipynb
scripts/: build.sh
services/api_bdd/: Dockerfile  api_bdd.py  app.py  entrypoint.sh  init_bdd.py  init_es.py  requirements.txt
services/api_github/: Dockerfile  api_github.py
services/api_nlp/: Dockerfile  api_nlp.py  nlp.py  requirements.txt
services/elasticsearch/: Dockerfile  init_es.py
services/git_api/: Dockerfile  init_git.py
services/interface/: Dockerfile  app.py
services/interface/scripts/: build.sh  deploy.sh
services/interface_admin/: Dockerfile  app.py  requirements.txt
services/postgresql_db/: init.sql
