[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "github-repo-recommendation"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Kenzo LECOINDRE - Allane BOURDON - Francois LEVET" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["github-repo-recommendation"]
force_sort_within_sections = true
